Fixing issue due to whitespace inside span

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .newspaper {
   background-color: rgb(250, 234, 214);
   font-family: 'Times New Roman';
-  font-weight: 700;
+  font-weight: bold;
 }
 
 .magazine1 {
